<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MADelivery</string>
    <string name="form_name">Name</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_phone">Phone number</string>
    <string name="form_address">Address</string>
    <string name="form_info">Additional information</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="galleryPermission">Allow the Gallery usage in settings to use this funcionality.</string>
    <string name="cameraPermission">Allow the camera usage in settings to use this funcionality.</string>
    <string name="minimum_order">Minimum order:&#160;</string>
    <string name="delivery_cost">Delivery cost:&#160;</string>
    <string name="restaurant_name">Restaurant name</string>

    <!--Food Categories-->
    <string name="All">All</string>
    <string name="Pizza">Pizza</string>
    <string name="Sandwiches">Sandwiches</string>
    <string name="Kebab">Kebab</string>
    <string name="Italian">Italian</string>
    <string name="American">American</string>
    <string name="Desserts">Desserts</string>
    <string name="Fry">Fry</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Asian">Asian</string>
    <string name="Mediterranean">Mediterranean</string>
    <string name="South_American">South American</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="free_delivery">Free delivery</string>
    <string name="filter_restaurants">Filter restaurants</string>

    <string name="opening_hours">Opening hours</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="modify_hours">Edit hours</string>
    <string name="Closed">Closed</string>
    <string name="other_hours">Other hours</string>
    <string name="open_24h">Open 24h</string>
    <string name="ordered_dishes">Ordered dishes</string>
    <string name="subtotal">Subtotal: </string>
    <string name="address">Address: </string>
    <string name="lunch_time">Delivery time: </string>
    <string name="notes">Notes: </string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total">Total</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone number:</string>

    <string-array name="hours_list">
        <item>As soon as possible</item>
        <item>00:00</item>
        <item>00:15</item>
        <item>00:30</item>
        <item>00:45</item>
        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>
        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>
        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>
        <item>04:00</item>
        <item>04:15</item>
        <item>04:30</item>
        <item>04:45</item>
        <item>05:00</item>
        <item>05:15</item>
        <item>05:30</item>
        <item>05:45</item>
        <item>06:00</item>
        <item>06:15</item>
        <item>06:30</item>
        <item>06:45</item>
        <item>07:00</item>
        <item>07:15</item>
        <item>07:30</item>
        <item>07:45</item>
        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
        <item>22:00</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>
        <item>23:00</item>
        <item>23:15</item>
        <item>23:30</item>
        <item>23:45</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="order_price">Order price</string>
    <string name="evaluation">Evaluation</string>
    <string name="yes">YES</string>
    <string name="evaluate_dialog_message">Do you want to evaluate this order?</string>
    <string name="error_evaluate_toast">Evaluate your order after receiving it</string>
    <string name="RatingTitle">Rating</string>
    <string name="rating_restaurant">Restaurant</string>
    <string name="rating_food">Food cost</string>
    <string name="rating_service">Delivery service</string>
    <string name="rating_review">Review your order</string>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="evaluate_hidden_message">You have already reviewed this restaurant. You can only evaluate the delivery service.</string>
    <string name="mandatory_evaluate">The evaluation of restaurant, food and service is mandatory.</string>

    <string name="search_restaurant">Search restaurant</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="shoppingcart">shoppingCart</string>
    <string name="order_recap">Order recap</string>
    <string name="orders_title">Orders</string>
    <string name="pending">Pending</string>
    <string name="history">History</string>
    <string name="edit_fields">Edit fields</string>
    <string name="connection_error">Connection error.</string>
    <string name="upload_failure">Upload Failure</string>
    <string name="pic_saved">Data Saved!</string>
    <string name="not_available_quantity">The quantity selected is not available</string>
    <string name="Menu_title">Place an order!</string>
    <string name="looking_for_food">Looking for food?</string>
    <string name="search">Search</string>
    <string name="Preferiti">Favorite</string>
    <string name="top_restaurant">Top Restaurant</string>
    <string name="the_cart_is_empty">The cart is empty</string>
    <string name="minimum_amount_of_the_order_isn_t_reached">Minimum amount of the order isn\'t reached</string>
    <string name="dish">Dish</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="ingredients">Ingredients:</string>
    <string name="food_category">Food category</string>
    <string name="menu">Menu</string>
    <string name="best_meals">Best Meals</string>
    <string name="dialog_order_received_msg">Do you have received this order?</string>
    <string name="order_sent">Your order has been sent correctly</string>
    <string name="view_details">View Details</string>
    <string name="leave_review">Leave a Review</string>

</resources>
