<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogScroll"
        android:layout_marginBottom="16dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/food_category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/food_category_clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="Food category"
                    android:textColor="#3d3d3d"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/arrowbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="8dp"
                    android:src="@drawable/ic_sort_down"
                    android:tint="@color/colorPrimary" />
            </LinearLayout>

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/hiddenFoodCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/food_category_layout"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:ael_duration="200"
                app:ael_expanded="false"
                app:ael_interpolator="accelerate"
                app:ael_orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_group_food_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/All" />

                    <RadioButton
                        android:id="@+id/radio_pizza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Pizza" />

                    <RadioButton
                        android:id="@+id/radio_sandwiches"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sandwiches" />

                    <RadioButton
                        android:id="@+id/radio_kebab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Kebab" />

                    <RadioButton
                        android:id="@+id/radio_italian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Italian" />

                    <RadioButton
                        android:id="@+id/radio_american"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/American" />

                    <RadioButton
                        android:id="@+id/radio_desserts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Desserts" />

                    <RadioButton
                        android:id="@+id/radio_fry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fry" />

                    <RadioButton
                        android:id="@+id/radio_vegetarian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Vegetarian" />

                    <RadioButton
                        android:id="@+id/radio_asian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Asian" />

                    <RadioButton
                        android:id="@+id/radio_mediterranean"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Mediterranean" />

                    <RadioButton
                        android:id="@+id/radio_south_american"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/South_American" />

                </RadioGroup>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <CheckBox
                android:id="@+id/freeDeliveryCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hiddenFoodCategories"
                android:text="@string/free_delivery" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/dialogCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogScroll"
        android:layout_alignParentStart="true"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/dialogConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogScroll"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:text="@string/ok"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorAccent" />

</RelativeLayout>