<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <RelativeLayout
        android:id="@+id/relativeItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish"
            android:textColor="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dishQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/dishName"
            android:layout_alignBaseline="@+id/dishName"
            android:text="@string/quantity"
            android:textColor="#999999"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:text="@string/price"
            android:textColor="#222222" />
    </RelativeLayout>
</RelativeLayout>