<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/reservation_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="top|start"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="150"
            android:maxLines="5"
            android:minLines="1"
            android:scrollbars="vertical" />

        <Spinner
            android:id="@+id/reservationDeliveryHours"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:entries="@array/hours_list">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:gravity="start"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:gravity="end"
                android:text="@string/confirm_order"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>

