<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardId"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/orderItemLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/restaurantPhoto">

            <TextView
                android:id="@+id/textRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restaurant_name"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lunch_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_address"
                android:layout_marginTop="3dp"
                android:text="@string/lunch_time"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lunch_time"
                android:layout_marginTop="3dp"
                android:text="@string/order_price"
                android:textStyle="bold"
                android:textSize="15sp" />

        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/restaurantPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp" />

        <ImageView
            android:id="@+id/evaluate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>